force-app/main/default/objects/BenefitProduct__c/BenefitProduct__c.object-meta.xml
<CustomObject>
    <label>Produto Benefício</label>
    <nameField>
        <displayFormat>PB-{0000}</displayFormat>
        <label>Produto Benefício Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Produtos Benefício</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>