force-app/main/default/objects/BenefitProduct__c/fields/ComboPromotion__c.field-meta.xml
<CustomField>
    <fullName>ComboPromotion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Combos e Promoções</label>
    <referenceTo>ComboPromotion__c</referenceTo>
    <relationshipLabel>Produtos Benefício</relationshipLabel>
    <relationshipName>Produtos_Beneficio</relationshipName>
    <type>Lookup</type>
</CustomField>