force-app/main/default/objects/BenefitProduct__c/fields/MinQuantity__c.field-meta.xml
<CustomField>
    <fullName>MinQuantity__c</fullName>
    <label>Quantidade Mínima</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>