force-app/main/default/objects/BenefitProduct__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Produtos Benefício</relationshipLabel>
    <relationshipName>Produtos_Beneficio</relationshipName>
    <type>Lookup</type>
</CustomField>