force-app/main/default/objects/BenefitProduct__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ComboPromotion__c</columns>
    <columns>Product__c</columns>
    <columns>MinQuantity__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>